# generic-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  alembic.ini  generic-app-phase1-spec.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci.yml.off
alembic/: env.py
alembic/versions/: f4311be9dd73_create_users_and_notes_tables.py
app/: __init__.py  config.py  db.py  health.py  main.py
app/static/: app.js  index.html  style.css
aws_eks/: 0-storageclass.yml
aws_eks/bootstrap/: main.tf  outputs.tf  terraform.tfstate  variables.tf
aws_eks/ci/: backend.tf  ecr.tf  iam.tf  oidc.tf  outputs.tf  provider.tf  variables.tf
aws_eks/infra/: backend.tf  main.tf  terraform.tfvars  variables.tf  versions.tf
aws_eks/infra/modules/eks/: main.tf  outputs.tf  variables.tf
aws_eks/infra/modules/vpc/: main.tf  variables.tf
aws_eks/kuber/: deployment.yaml  kustomization.yaml  migration-job.yaml  secret.yaml  statefulset.yaml
kuber/base/: deployment.yaml  kustomization.yaml  migration-job.yaml  statefulset.yaml
kuber/overlays/aws/: README.md
kuber/overlays/homelab/: kustomization.yaml  namespace.yaml  patch-app-nodeport.yaml  patch-migration-hook.yaml  patch-postgres.yaml  postgres-sealedsecret.yaml  sealedsecret.yaml  storageclass.yaml
tests/: conftest.py  test_api.py  test_health.py
